hls/Byte_Count_Really_Good_This_Time/solution1/csim/report/make_go_fast_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../tb.cpp in debug mode
csim.mk:78: recipe for target 'obj/tb.o' failed
In file included from C:/Xilinx/Vitis_HLS/2023.1/include/floating_point_v7_1_bitacc_cmodel.h:149:0,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/hls_fpo.h:143,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/etc/hls_half_fpo.h:18,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/hls_half.h:25,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/etc/ap_private.h:52,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/etc/ap_common.h:666,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/ap_int.h:10,
                 from ../../../accelerator.h:3,
                 from ../../../tb.cpp:17:
C:/Xilinx/Vitis_HLS/2023.1/include/gmp.h:58:0: warning: "__GMP_LIBGMP_DLL" redefined
 #define __GMP_LIBGMP_DLL  0
 
In file included from C:/Xilinx/Vitis_HLS/2023.1/include/hls_fpo.h:143:0,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/etc/hls_half_fpo.h:18,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/hls_half.h:25,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/etc/ap_private.h:52,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/etc/ap_common.h:666,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/ap_int.h:10,
                 from ../../../accelerator.h:3,
                 from ../../../tb.cpp:17:
C:/Xilinx/Vitis_HLS/2023.1/include/floating_point_v7_1_bitacc_cmodel.h:141:0: note: this is the location of the previous definition
 #define __GMP_LIBGMP_DLL 1
 
../../../tb.cpp: In function 'int main()':
../../../tb.cpp:26:22: error: invalid initialization of reference of type 'hls::axis<ap_uint<8>, 0ull, 0ull, 0ull>&' from expression of type 'data [64] {aka ap_uint<8> [64]}'
     make_go_fast(a, b);
                      ^
In file included from ../../../tb.cpp:17:0:
../../../accelerator.h:15:6: note: in passing argument 1 of 'void make_go_fast(hls::axis<ap_uint<8>, 0ull, 0ull, 0ull>&, hls::axis<ap_uint<8>, 0ull, 0ull, 0ull>&)'
 void make_go_fast(hls::axis<data, 0, 0, 0> &in, hls::axis<data, 0, 0, 0> &out);
      ^~~~~~~~~~~~
make: *** [obj/tb.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
